@@ -23,7 +23,8 @@ snapshot
 	- Switched to use Text::Template instead of CGI::FastTemplate,
 	  see the UPGRADE file for details. (Don Armstrong)
 	- Create copyright notices on pictures using truetype fonts
-    instead of png images (Thomas Petersen)
+    instead of png images. Font, color and size can be configured
+    (Thomas Petersen, Me)
 
 If set to '1', GalleryThumbnailSize is the long and the short side
 of the thumbnail image instead of the width and height.
